--- a/CISC 3610 Labs/form lab/active.css
+++ b/CISC 3610 Labs/form lab/active.css
@@ -1,48 +1,9 @@
 body{
   font-family: Arial;
 }
-/* beginning of nav bar css*/
-#navbar{
-  font-family: Monaco, arial;
-  margin-left: -.5em;
-  background: white;
-  display: flex;
-  position: fixed;
-  top: 0px;
-  width: 100%;
-}
-
-#navbar>ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 100%;
-  width: 100%;
-}
 
 
 
-.nav-link {
-  text-decoration: none;
-  color: black;
-  list-style-type: none;
-  height: 100%;
-  width: 100%;
-  letter-spacing: 1px;
-  font-weight: thin;
-  font-size: 1em;
-  text-align: center;
-}
-.nav-link> li {
-  padding: .5em;
-  height: 100%;
-}
-
-.nav-link:hover{
-  background: pink;
-}
-
-/* end of nav bar css*/
 
 #this-form > p{
   font-size: 2em;
@@ -56,7 +17,7 @@ body{
   margin-left: auto;
   margin-right: auto;
   padding: 2em;
-  width: 70%;
+  width: 50%;
   background: rgb(255, 154, 187);
   height: 70vh;
   border-radius: 10px;
@@ -99,9 +60,11 @@ button:hover{
   display:flex;
   justify-content: space-between;
 }
-#submit-button{
 
+#home-icon{
+  margin-left: 3em;
+  margin-top: -5em;
+  font-size: 1em;
+  padding: .75em;
+  position:fixed;
 }
-
-
-
