--- a/CISC 3610 Labs/lab1-chartlab/active.css
+++ b/CISC 3610 Labs/lab1-chartlab/active.css
@@ -1,50 +1,17 @@
+body{
+  background: rgb(250, 220, 224);
+}
 #myCanvas{
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5em;
-  width: 50%;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 6em;
+  width: 40%;
   border-radius: 10px;
 }
 
-/* beginning of nav bar css*/
-#navbar{
-  font-family: Monaco;
-  margin-left: -.5em;
-  background: white;
-  display: flex;
-  position: fixed;
-  top: 0px;
-  width: 100%;
-}
-
-#navbar>ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 100%;
-  width: 100%;
-}
-
-
-
-.nav-link {
-  text-decoration: none;
-  color: black;
-  list-style-type: none;
-  height: 100%;
-  width: 100%;
-  letter-spacing: 1px;
-  font-weight: thin;
+#home-icon{
+  margin-left: 3em;
   font-size: 1em;
-  text-align: center;
+  padding: .75em;
+  position:fixed;
 }
-.nav-link> li {
-  padding: .5em;
-  height: 100%;
-}
-
-.nav-link:hover{
-  background: pink;
-}
-
-/* end of nav bar css*/
