--- a/CISC 3610 Labs/form lab/active.css
+++ b/CISC 3610 Labs/form lab/active.css
@@ -17,7 +17,7 @@ body{
   margin-left: auto;
   margin-right: auto;
   padding: 2em;
-  width: 50%;
+  max-width: 40%;
   background: rgb(255, 154, 187);
   height: 70vh;
   border-radius: 10px;
