--- a/CISC 3610 Labs/lab1-chartlab/active.css
+++ b/CISC 3610 Labs/lab1-chartlab/active.css
@@ -2,10 +2,10 @@ body{
   background: rgb(250, 220, 224);
 }
 #myCanvas{
-  margin-left: 30%;
-  margin-right: 30%;
+  /* margin-left: 30%;
+  margin-right: 30%; */
+  width: 60%;
   margin-top: 6em;
-  width: 40%;
   border-radius: 10px;
 }
 
@@ -14,4 +14,21 @@ body{
   font-size: 1em;
   padding: .75em;
   position:fixed;
+}
+
+#flex{
+  /* margin-top: 6em; */
+  margin-left: 20%;
+  margin-right: 15%;
+  display: flex;
+  flex-direction: row;
+}
+
+#pick-numbers{
+  margin-top: 6em;
+  padding: 1em;
+  width: 100%;
+}
+#pick-numbers> label{
+  letter-spacing: 1px;
 }
