--- a/CISC 3610 Projects/AudioProject/active.css
+++ b/CISC 3610 Projects/AudioProject/active.css
@@ -1,16 +1,39 @@
 body{
   font-family: 'helvetica', 'Arial Narrow', Arial, sans-serif;
+  background-color: #ff9a9a;
+  color: #543864;
+}
+
+#title{
+  padding-top: .1em;
+  margin-bottom: .25em;
+  margin-top: -.10em;
+  text-align: center;
+  letter-spacing: 4px;
+  font-size: 2em;
+  font-weight: 900;
+  /* text-shadow: 2px 2px 5px gainsboro; */
+
+}
+
+h3{
+  color: #202040
+}
+
+p{
+  text-align: justify;
 }
 #main{
+  margin-left: 1%;
   display: flex;
   flex-direction: row;
 }
+#audio-canvas{
+  border-radius: 10px;
+}
 
-h1{
-  margin-top: -.10em;
-  text-align: center;
-  letter-spacing: 2px;
-  text-shadow: 2px 2px 5px peru;
+#text{
+  padding: 1em;
 }
 
 #home-icon{
@@ -18,4 +41,25 @@ h1{
   font-size: 1em;
   padding: .25em;
   position:fixed;
+}
+
+#speak-button{
+  width: 100px;
+  background: #543864;
+  color: #ffbd69;
+  padding: 1em;
+  border-radius: 10px;
+  letter-spacing: 2px;
+  font-weight: bolder
+}
+
+
+#speak-button:hover{
+  width: 100px;
+  background: #202040;
+  color: #ffbd69;
+  padding: 1em;
+  border-radius: 10px;
+  letter-spacing: 2px;
+  font-weight: bolder
 }
