phaser project: added assets. Updated icon

--- a/CISC 3610 Projects/PhaserProject/active.css
+++ b/CISC 3610 Projects/PhaserProject/active.css
@@ -1,9 +1,6 @@
 body{
   background: rgb(170, 214, 249);
 }
-#phaser-example + canvas{
-  margin-left: 10%;
-}
 
 #home-icon{
   margin-left: 1em;
@@ -14,5 +11,11 @@ body{
 
 h1{
   text-align: center;
-  font-family: 'monaco';
+  font-family: 'Futura';
+  letter-spacing: 2px;
+}
+
+canvas{
+  margin-right: 5%;
+  margin-left: 5%;
 }
