--- a/CISC 3610 Projects/Cartoon Project/active.css
+++ b/CISC 3610 Projects/Cartoon Project/active.css
@@ -11,3 +11,11 @@ h1{
   text-align: center;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+#home-icon{
+  /* margin-left: 1em; */
+  font-size: 1em;
+  padding-left: 1em;
+  padding-top: 1em;
+  /* position:fixed; */
+}
