--- a/CISC 3610 Projects/Animation Project/active.css
+++ b/CISC 3610 Projects/Animation Project/active.css
@@ -1,16 +1,28 @@
 #home-icon{
-  margin-left: 3em;
+  margin-left: .75em;
   font-size: 1em;
-  padding: .75em;
+  padding: .5em;
   position:fixed;
 }
 
+body{
+  background-color: rgb(255, 217, 122);
+
+  /* background-color: darkgoldenrod; */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 #my-canvas{
-  margin-left: auto;
-margin-right: auto;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 h1{
   text-align: center;
-  font-family: arial;
+  color: darkgoldenrod;
+  /* color: rgb(255, 217, 122); */
+  letter-spacing: 3px;
+}
+
+p {
+  color: rgb(138, 101, 8);
 }
