--- a/active.css
+++ b/active.css
@@ -84,6 +84,14 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+#cisc3620{
+  padding-top: 14em;
+  height: 100vh;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
 #project-list-3610 > dd{
   padding: 1em;
 }
