--- a/active.css
+++ b/active.css
@@ -81,27 +81,33 @@ body {
   background-color: #213c64;
   color: white;
   padding: 1em;
-  border-radius: 10px;
   margin: 1em;
 
 }
-#portfolio >p {
+
+
+#portfolio-content{
   background-color: white;
   color: black;
-  padding: 1em;
+}
+
+#portfolio-content >p {
+  color: #7e2955;
+  padding: 3em;
   text-align: justify;
 }
+
 #cisc3610{
-  padding-top: 6em;
-  height: 100vh;
+  /* padding-top: 6em;
+  height: 100vh; */
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 
-#cisc3620{
-  padding-top: 14em;
-  height: 100vh;
+#cisc3620, #content{
+
+  /* height: 100vh; */
   width: 80%;
   margin-left: auto;
   margin-right: auto;
