added 3620 project tiles and moved projects to a seperate page

--- a/active.css
+++ b/active.css
@@ -200,7 +200,7 @@ body {
   background-color: #ba3e7e;
 }
 
-#project-list-3610 > div {
+.project-list > div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
