--- a/active.css
+++ b/active.css
@@ -6,11 +6,12 @@ body {
 /* beginning of nav bar css*/
 #navbar{
   margin-left: -.5em;
-  background: white;
+  background: black;
   display: flex;
   position: fixed;
   top: 0px;
   width: 100%;
+  opacity: .8
 }
 
 #navbar>ul {
@@ -25,9 +26,9 @@ body {
 
 .nav-link {
   text-decoration: none;
-  color: black;
+  color: white;
   list-style-type: none;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   letter-spacing: 1px;
   font-weight: thin;
@@ -35,18 +36,19 @@ body {
   text-align: center;
 }
 .nav-link> li {
-  padding: .5em;
+  padding: .25em;
   height: 100%;
 }
 
 .nav-link:hover{
-  background: pink;
+  color: #ba3e7e;
 }
 
 #home-icon{
-  margin-left: 3em;
+  opacity: .8;
+  margin-left: 2em;
   font-size: 1em;
-  padding: .75em;
+  padding: .5em;
   position:fixed;
 }
 /* end of nav bar css*/
