--- a/active.css
+++ b/active.css
@@ -114,7 +114,7 @@ body {
   padding: 1em;
   text-align: justify;
 }
-#cisc3610, #cisc3620, #content, #fcc{
+#cisc3610, #cisc3620, #content, #fcc, #hci, #game-design{
   /* padding-top: 6em;
   /* height: 100vh; */
   width: 80%;
@@ -207,6 +207,12 @@ body {
 
 .project-tile:hover{
   background-color: #ba3e7e;
+}
+
+.project-tile-wide{
+  min-width: 80%;
+  max-width: 80%;
+  max-height: 33%;
 }
 
 .project-list > div {
