(feat) Added Tiling Series: Squares to homepage

--- a/active.css
+++ b/active.css
@@ -114,7 +114,7 @@ body {
   padding: 1em;
   text-align: justify;
 }
-#cisc3610, #cisc3620, #content, #fcc, #hci, #game-design{
+#cisc3610, #cisc3620, #content, #fcc, #hci, #game-design, #fun{
   /* padding-top: 6em;
   /* height: 100vh; */
   width: 80%;
