--- a/active.css
+++ b/active.css
@@ -1,3 +1,7 @@
+html{
+  width: 100%;
+}
+
 body {
   font-family: Monaco, arial;
   width: 100%;
@@ -69,6 +73,21 @@ body {
   width: 25%;
 }
 
+.social-icons {
+  margin-left: auto;
+  margin-right:auto;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content : space-around;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
+  padding-bottom: 1em;
+}
+.social-icons img{
+  width: 20%;
+}
 #myname > h1 {
   font-size: 2em;
   text-align: center;
@@ -79,12 +98,10 @@ body {
 }
 
 #portfolio {
-
   background-color: #213c64;
   color: white;
   padding: 1em;
   margin: 1em;
-
 }
 
 
@@ -110,9 +127,20 @@ body {
 }
 
 #resume-content p {
+  font-size: 1em;
+  font-weight: bold;
   color: #213c64;
   padding: 1em;
   text-align: justify;
+}
+
+
+#resume-content p, #resume-content a{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
 }
 #cisc3610, #cisc3620, #content, #fcc, #hci, #game-design, #fun, #cisc3630{
   /* padding-top: 6em;
